--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,16 +9,16 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>Hi! My name is Sameer Barretto and I'm a junior studying Computer Science in Engineering at the University of Michigan. I'm passionate about coding, entreprenership and animals! </p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point! </p>
+                    <p>Click on the tiles below to find out a little more about me! I'm currently looking for software engineering internships for the summer of 2020. If you'd like to connect, feel free to reach out using the social links at the bottom. Thanks for checking out my page!</p>
                 </div>
-                <div class="col-lg-8 col-lg-offset-2 text-center">
+                <!-- <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="https://github.com/jeromelachaud/freelancer-theme" class="btn btn-lg btn-outline">
                         <i class="fa fa-download"></i> Download Theme
                     </a>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
