Content changes to the tiles

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,10 +9,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Hi! My name is Sameer Barretto and I'm a junior studying Computer Science in Engineering at the University of Michigan. I'm passionate about coding, entreprenership and animals! </p>
+                    <p>Hi! My name is Sameer Barretto and I'm a junior studying Computer Science in Engineering at the University of Michigan. I'm passionate about coding, entreprenership and animals! Click on the tiles below to find out a little more about me!</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Click on the tiles below to find out a little more about me! I'm currently looking for software engineering internships for the summer of 2020. If you'd like to connect, feel free to reach out using the social links at the bottom. Thanks for checking out my page!</p>
+                    <p>I'm currently looking for software engineering internships for the summer of 2020. If you'd like to connect, feel free to reach out using the contact form or social links at the bottom. Thanks for checking out my page!</p>
                 </div>
                 <!-- <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="https://github.com/jeromelachaud/freelancer-theme" class="btn btn-lg btn-outline">
