--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 <html>
     {% include head.html %}
     <body id="page-top" class="index">
