--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
+<head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-147453585-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-147453585-1');
+</script>
+</head>
 <html>
     {% include head.html %}
     <body id="page-top" class="index">
